# smolagents_helpers

./: .gitignore  README.en.md  README.md  pyproject.toml  test-requirements.in  test-requirements.txt
src/smolagents_helpers/: __init__.py  brave_search_tool.py  eu_data_tool.py  ollama_model.py
tests/integration/: test_agent_workflow_brave_ollama.py  test_eu_data_tool_workflow.py
