[project]
name = "smolagents-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roberto Tomás", email = "roberto.tomas.cuentas@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.4.7",
    "requests>=2.32.3",
    "smolagents>=1.13.0",
]

[project.scripts]
smolagents-helpers = "smolagents_helpers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
